﻿Version [Version Number] ([Friendly Version Number]) [Release Date]

Version vNext
	General description:
	
	Code changes:
	    -A new XmlFileLoggingProvider has been added.
		-The library is now able to handle exceptions with multiple inner exceptions. (Work item 4028.) 
		 When an Exception contains a public 'InnerExceptions' property (such as both the .NET 4.0 
		 System.AggregateException and CuttingEdge.Logging.CompositeException contain), the framework will use
		 this property instead of the InnerException property. The SqlLoggingProvider and
		 AspNetSqlLoggingProvider will store all inner exceptions in the database. The MailLoggingProvider and 
		 WindowsEventLogLoggingProvider will display information about the inner exceptions in their output by
		 using the exception's ToString() method.
		-SmtpClient is now disposed when running inside .NET 4.0 or higher. Work item 6133.
		-The API of the provided logging provider classes is now changed in such a way that code-based 
		 configuration becomes possible. This means that the logging providers now support optional 
		 constructors that allow a provider to be completely initialized, without the need to call 
		 Initialize(string, NameValueCollection). Work item 5143.
		-AspNetSqlLoggingProvider now uses HttpContext.User.Identity.Name and IPrincipal.Identity.Name for 
		 retrieving the current logged-on user name, instead of using the System.Web.Security.Membership.
		 This makes the usage of this logger more flexible and improves performance. Work item 6092.
		-MailLoggingProvider.BuildMailMessageSubject refactored. Useless use of StringBuilder removed. This
		 improves performance.


Version 1.2.2.10128 (1.2.2) 2010-05-08
	General description:
		This release fixes a single bug in the MailLoggingProvider. The bug prevented the provider from 
		logging when either the message or the source of the LogEntry contained a new line character.
	
	Bug fixes: